@@ -54,6 +54,9 @@ model <- mxModel(model, mxAlgebra(A * t(B), name = 'test5b'))
 model <- mxModel(model, mxAlgebra(A %x% B, name = 'test6'))
 model <- mxModel(model, mxAlgebra(t(A) %x% B, name = 'test6a'))
 model <- mxModel(model, mxAlgebra(A %x% t(B), name = 'test6b'))
+model <- mxModel(model, mxAlgebra(A %^% B, name = 'test38'))
+model <- mxModel(model, mxAlgebra(t(A) %^% B, name = 'test38a'))
+model <- mxModel(model, mxAlgebra(A %^% t(B), name = 'test38b'))
 model <- mxModel(model, mxAlgebra(A %&% B, name = 'test7'))
 model <- mxModel(model, mxAlgebra(t(A) %&% B, name = 'test7a'))
 model <- mxModel(model, mxAlgebra(A %&% t(B), name = 'test7b'))
@@ -153,6 +156,9 @@ omxCheckCloseEnough(model[['test5b']]@result, A@values * t(B@values), 0.001)
 omxCheckCloseEnough(model[['test6']]@result, A@values %x% B@values, 0.001)
 omxCheckCloseEnough(model[['test6a']]@result, t(A@values) %x% B@values, 0.001)
 omxCheckCloseEnough(model[['test6b']]@result, A@values %x% t(B@values), 0.001)
+omxCheckCloseEnough(model[['test38']]@result, A@values %^% B@values, 0.001)
+omxCheckCloseEnough(model[['test38a']]@result, t(A@values) %^% B@values, 0.001)
+omxCheckCloseEnough(model[['test38b']]@result, A@values %^% t(B@values), 0.001)
 omxCheckCloseEnough(model[['test7']]@result, A@values %&% B@values, 0.001)
 omxCheckCloseEnough(model[['test7a']]@result, t(A@values) %&% B@values, 0.001)
 omxCheckCloseEnough(model[['test7b']]@result, A@values %&% t(B@values), 0.001)
