@@ -36,6 +36,7 @@ void omxElementPower(omxMatrix** matList, int numArgs, omxMatrix* result);
 void omxMatrixMult(omxMatrix** matList, int numArgs, omxMatrix* result);
 void omxMatrixElementMult(omxMatrix** matList, int numArgs, omxMatrix* result);
 void omxKroneckerProd(omxMatrix** matList, int numArgs, omxMatrix* result);
+void omxKroneckerPower(omxMatrix** matList, int numArgs, omxMatrix* result);
 void omxQuadraticProd(omxMatrix** matList, int numArgs, omxMatrix* result);
 void omxElementDivide(omxMatrix** matList, int numArgs, omxMatrix* result);
 void omxMatrixAdd(omxMatrix** matList, int numArgs, omxMatrix* result);
